hodu-server/tests/bruno/requests/compile-errors/[c] no semicolon.bru
meta {
  name: [c] no semicolon
  type: http
  seq: 2
}

post {
  url: {{baseURL}}/api/v1/submit
  body: json
  auth: none
}

body:json {
  {
    "language": "c",
    "code": "#include <stdio.h>\nint main() { printf(\"Hello World\") }",
    "stdin": "",
    "expected_stdout": "",
    "fields": ["*"]
  }
}

assert {
  res.status: eq 200
  res.body.fields.stdout: eq ""
  res.body.fields.stderr: neq 
  res.body.status: eq compile_error
}
